Rewrote phrase pre-slice symbol joining to produce multi-word symbols